# whiterose

./: LICENSE  README.md  pyproject.toml
tests/: test_whiterose.py
whiterose/: __init__.py
