[project]
name = "whiterose"
version = "1.0.0"
dependencies = [
    'pytx',
]
authors = [{name = "noize-e"}]
description = "Python datetime toolkit"
readme = "README.md"
requires-python = ">=3"
keywords = ["unix timestamp", "epoch", "datetime", "time", "date"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/noize-e/whiterose"
"Bug Tracker" = "https://github.com/noize-e/whiterose/issues"
